Regression: UI: the “j” in the Front of Text Input Field is Hidden when Using “Segoe UI” Font #115938

Closed
opened 2023-12-08 12:50:03 +01:00 by Ruri-Res · 1 comment

System Information
Operating system: Windows 10
Graphics card:

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-22 10:13, hash: 80943094745b
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-19 21:26, hash: 264c3e7bd7a6

Short description of error

Exact steps for others to reproduce the error

  1. Preferences→Interface→Text Rendering→Interface Font, set it to "Segoe UI Regular" (C:\Windows\Fonts\segoeui.ttf);
  2. Click any Text Input Field, type "j" (lower case).

If turn off Text Anti-Aliasing, "j" would be shown.
Other fonts using the "Segoe UI" as their "English characters font" get the same problem.

**System Information** Operating system: Windows 10 Graphics card: **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-22 10:13, hash: `80943094745b` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-19 21:26, hash: `264c3e7bd7a6` **Short description of error** **Exact steps for others to reproduce the error** 1. Preferences→Interface→Text Rendering→Interface Font, set it to "Segoe UI Regular" (C:\Windows\Fonts\segoeui.ttf); 2. Click any Text Input Field, type "j" (lower case). If turn off Text Anti-Aliasing, "j" would be shown. Other fonts using the "Segoe UI" as their "English characters font" get the same problem.
Ruri-Res added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-08 12:50:04 +01:00
Iliya Katushenock changed title from UI: the “j” in the Front of Text Input Field is Hidden when Using “Segoe UI” Font to Regression: UI: the “j” in the Front of Text Input Field is Hidden when Using “Segoe UI” Font 2023-12-08 13:31:35 +01:00
Iliya Katushenock added this to the 4.0 milestone 2023-12-08 13:31:51 +01:00
Harley Acheson self-assigned this 2023-12-08 22:12:40 +01:00
Member

Ouch.

This font's "j" has a negative left-side bearing. The left vertical line in the following capture is the position of the pen after the previous letter, which is then advanced to the right vertical line.

image

This little "j" is designed to have its tail go under the letter before it. I would normally see this effect done with kerning. You can see this here:

image

Currently this makes it fail our clipping tests if this letter is first. Oh well, I think I can see how to fix this.

Ouch. This font's "j" has a negative left-side bearing. The left vertical line in the following capture is the position of the pen after the previous letter, which is then advanced to the right vertical line. ![image](/attachments/20846286-afe7-4155-b846-0b5b192c06c1) This little "j" is designed to have its tail go under the letter before it. I would normally see this effect done with kerning. You can see this here: ![image](/attachments/d76e3cdd-70aa-4ecd-a3a8-3826bff4b95d) Currently this makes it fail our clipping tests if this letter is first. Oh well, I think I can see how to fix this.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-09 01:52:58 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:04:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115938
No description provided.